--- a/src/pages/home/components/learn-more/more.module.scss
+++ b/src/pages/home/components/learn-more/more.module.scss
@@ -35,6 +35,7 @@
   &_card {
     width: 100%;
     display: flex;
+    box-sizing: border-box;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -53,6 +54,7 @@
     }
     &_sphere {
       margin-top: auto;
+      width: 100%;
     }
   }
   &_arrows {
@@ -66,13 +68,16 @@
   }
 }
 .wing {
+  position: relative;
   margin-block: -50px;
+  z-index: -1;
 }
 .lottie_container {
   display: flex;
   flex-direction: row-reverse;
   align-items: flex-end;
-  justify-content: flex-start;
+  justify-content: start;
+  max-width: fit-content;
   span {
     padding-bottom: 2rem;
     font-size: 60px;
@@ -81,8 +86,7 @@
     letter-spacing: 0em;
     color: #82d89a80;
   }
-  svg {
-    width: min(100%, 200px) !important;
-    height: min(100%, 200px) !important;
+  &_lottie {
+    width: 150px;
   }
 }
